2012-06-01  Aurelien Jarno  <aurelien@aurel32.net>

	* sysdeps/ieee754/dbl-64/s_fma.c (__fma): Ensure a1 + u.d
	computation is not scheduled after fetestexcept.

2012-06-01  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/unix/sysv/linux/i386/bits/wchar.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/wchar.h: This.

2012-06-01  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/k_cosf.c: Fix underflow generation.
	* sysdeps/powerpc/fpu/k_sinf.c: Likewise.

2012-05-31  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/unix/sysv/linux/i386/bits/wchar.h: Include
	<bits/wordsize.h>.
	(__WCHAR_MIN): Support __WORDSIZE == 64.
	(__WCHAR_MAX): Likewise.

	* sysdeps/unix/sysv/linux/x86_64/bits/typesizes.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/typesizes.h: This.

	[BZ #14183]
	* sysdeps/unix/sysv/linux/x86_64/bits/typesizes.h (__FSWORD_T_TYPE):
	Defined with __SWORD_TYPE if __x86_64__ isn't defined.

	[BZ #14117]
	* sysdeps/unix/sysv/linux/x86_64/bits/siginfo.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/siginfo.h: This.

	* sysdeps/unix/sysv/linux/x86_64/bits/stat.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/stat.h: This.

	* sysdeps/unix/sysv/linux/x86_64/bits/stat.h (_STAT_VER_KERNEL):
	Defined to 1 if __x86_64__ isn't defined.
	(_STAT_VER_LINUX_OLD): New.
	(st_atime): Remove duplicate.
	(st_mtime): Likewise.
	(st_ctime): Likewise.

2012-05-31  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Remove sqrt(2) and sqrt test
	entries.

2012-06-01  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/powerpc/fpu/libm-test-ulps: Sort through
	gen-libm-test.pl.

	[BZ #14132]
	* elf/dl-reloc.c: Include <_itoa.h>.
	(_dl_reloc_bad_type): Remove use of INTUSE.
	* elf/dl-minimal.c (_itoa, _itoa_lower_digits): Likewise.
	* stdio-common/_itoa.c (_itoa_word, _itoa): Likewise.
	* stdio-common/psiginfo.c (psiginfo): Likewise.
	* stdio-common/psignal.c (psignal): Likewise.